littoral_sources = [
  'expression/addition/littoral.cc',
  'expression/address_of.cc',
  'expression/array_index.cc',
  'expression/assignment/littoral.cc',
  'expression/boolean/littoral.cc',
  'expression/char/littoral.cc',
  'expression/dereference/littoral.cc',
  'expression/dot.cc',
  'expression/enum_tag/littoral.cc',
  'expression/eq/littoral.cc',
  'expression/function_call/littoral.cc',
  'expression/ge/littoral.cc',
  'expression/gt/littoral.cc',
  'expression/in/littoral.cc',
  'expression/integer/littoral.cc',
  'expression/integer_division/littoral.cc',
  'expression/le/littoral.cc',
  'expression/lint2lint/littoral.cc',
  'expression/lint_from_integer/littoral.cc',
  'expression/logical_and/littoral.cc',
  'expression/logical_not/littoral.cc',
  'expression/logical_or/littoral.cc',
  'expression/long_integer/littoral.cc',
  'expression/lt/littoral.cc',
  'expression/modulo/littoral.cc',
  'expression/multiplication/littoral.cc',
  'expression/name/littoral.cc',
  'expression/ne/littoral.cc',
  'expression/negate/littoral.cc',
  'expression/nil/littoral.cc',
  'expression/paoc_from_string/littoral.cc',
  'expression/real/littoral.cc',
  'expression/real_division/littoral.cc',
  'expression/real_from_integer/littoral.cc',
  'expression/scan/littoral.cc',
  'expression/set/littoral.cc',
  'expression/set2set/littoral.cc',
  'expression/sgs/littoral.cc',
  'expression/sizeof/expression.cc',
  'expression/sizeof/type.cc',
  'expression/srs/littoral.cc',
  'expression/string/littoral.cc',
  'expression/subtraction/littoral.cc',
  'expression/ternary/littoral.cc',
  'expression/writeln.cc',
  'main.cc',
  'scope/builtin/littoral.cc',
  'scope/function/littoral.cc',
  'scope/interface/littoral.cc',
  'scope/program/littoral.cc',
  'scope/record/littoral.cc',
  'scope/temporary/compound/littoral.cc',
  'scope/temporary/with/littoral.cc',
  'scope/unit/littoral.cc',
  'statement/case/littoral.cc',
  'statement/compound/littoral.cc',
  'statement/empty/littoral.cc',
  'statement/expression/littoral.cc',
  'statement/for/littoral.cc',
  'statement/goto/littoral.cc',
  'statement/if/littoral.cc',
  'statement/infinite_loop/littoral.cc',
  'statement/label/littoral.cc',
  'statement/until/littoral.cc',
  'statement/var_expression.cc',
  'statement/var_names.cc',
  'statement/while/littoral.cc',
  'statement/with.cc',
  'statement/writeln/littoral.cc',
  'symbol/expression/constant/littoral.cc',
  'symbol/function/littoral.cc',
  'symbol/variable/normal/littoral.cc',
  'translator/littoral.cc',
]

littoral_deps = [
  libexplain_dep,
  boost_dep,
]

littoral_exe = executable(
  'ucsdpsys_littoral',
  sources : littoral_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : littoral_deps,
  link_with : lib_lib,
  install : true,
)
