pretty_sources = [
  'expression/addition/pretty.cc',
  'expression/address_of.cc',
  'expression/array_index.cc',
  'expression/assignment/pretty.cc',
  'expression/boolean/pretty.cc',
  'expression/char/pretty.cc',
  'expression/dereference/pretty.cc',
  'expression/enum_tag/pretty.cc',
  'expression/eq/pretty.cc',
  'expression/function_call/pretty.cc',
  'expression/ge/pretty.cc',
  'expression/gt/pretty.cc',
  'expression/in/pretty.cc',
  'expression/integer/pretty.cc',
  'expression/integer_division/pretty.cc',
  'expression/le/pretty.cc',
  'expression/lint2lint/pretty.cc',
  'expression/lint_from_integer/pretty.cc',
  'expression/logical_and/pretty.cc',
  'expression/logical_not/pretty.cc',
  'expression/logical_or/pretty.cc',
  'expression/long_integer/pretty.cc',
  'expression/lt/pretty.cc',
  'expression/modulo/pretty.cc',
  'expression/multiplication/pretty.cc',
  'expression/name/pretty.cc',
  'expression/ne/pretty.cc',
  'expression/negate/pretty.cc',
  'expression/nil/pretty.cc',
  'expression/paoc_from_string/pretty.cc',
  'expression/real/pretty.cc',
  'expression/real_division/pretty.cc',
  'expression/real_from_integer/pretty.cc',
  'expression/scan/pretty.cc',
  'expression/set/pretty.cc',
  'expression/set2set/pretty.cc',
  'expression/sgs/pretty.cc',
  'expression/sizeof/expression.cc',
  'expression/sizeof/type.cc',
  'expression/srs/pretty.cc',
  'expression/string/pretty.cc',
  'expression/subtraction/pretty.cc',
  'expression/ternary/pretty.cc',
  'expression/writeln.cc',
  'main.cc',
  'scope/builtin/pretty.cc',
  'scope/function/pretty.cc',
  'scope/interface/pretty.cc',
  'scope/program/pretty.cc',
  'scope/record/pretty.cc',
  'scope/temporary/compound/pretty.cc',
  'scope/temporary/with/pretty.cc',
  'scope/unit/pretty.cc',
  'statement/case/pretty.cc',
  'statement/compound/pretty.cc',
  'statement/for/pretty.cc',
  'statement/goto/pretty.cc',
  'statement/if/pretty.cc',
  'statement/infinite_loop/pretty.cc',
  'statement/label/pretty.cc',
  'statement/until/pretty.cc',
  'statement/var_expression.cc',
  'statement/var_names.cc',
  'statement/while/pretty.cc',
  'statement/with.cc',
  'statement/writeln/pretty.cc',
  'symbol/expression/constant/pretty.cc',
  'symbol/function/pretty.cc',
  'symbol/variable/normal/pretty.cc',
  'translator/pretty.cc',
]

pretty_deps = [
  libexplain_dep,
  boost_dep,
]

pretty_exe = executable(
  'ucsdpsys_pretty',
  sources : pretty_sources,
  include_directories : root_inc,
  implicit_include_directories : false,
  dependencies : pretty_deps,
  link_with : lib_lib,
  install : true,
)
