cases = [
  ['t0001a', [pretty_exe]],
  ['t0002a', [compile_exe, disassemble_exe]],
  ['t0003a', [compile_exe, disassemble_exe]],
  ['t0004a', [compile_exe]],
  ['t0005a', [compile_exe, disassemble_exe]],
  ['t0006a', [compile_exe, disassemble_exe]],
  ['t0007a', [pretty_exe]],
  ['t0008a', [compile_exe, disassemble_exe]],
  ['t0009a', [compile_exe, disassemble_exe]],
  ['t0010a', [pretty_exe]],
  ['t0011a', [compile_exe, disassemble_exe]],
  ['t0012a', [pretty_exe]],
  ['t0015a', [compile_exe, disassemble_exe]],
  ['t0016a', [pretty_exe]],
  ['t0017a', [compile_exe, disassemble_exe]],
  ['t0018a', [pretty_exe]],
  ['t0019a', [compile_exe, disassemble_exe]],
  ['t0020a', [compile_exe, disassemble_exe]],
  ['t0021a', [pretty_exe]],
  ['t0022a', [pretty_exe]],
  ['t0023a', [compile_exe, disassemble_exe]],
  ['t0025a', [pretty_exe]],
  ['t0026a', [compile_exe, disassemble_exe]],
  ['t0027a', [pretty_exe]],
  ['t0028a', [compile_exe, disassemble_exe]],
  ['t0029a', [compile_exe, disassemble_exe]],
  ['t0030a', [compile_exe, disassemble_exe]],
  ['t0031a', [compile_exe, disassemble_exe]],
  ['t0032a', [pretty_exe]],
  ['t0033a', [compile_exe, disassemble_exe]],
  ['t0035a', [pretty_exe]],
  ['t0036a', [compile_exe, disassemble_exe]],
  ['t0037a', [compile_exe, disassemble_exe]],
  ['t0038a', [pretty_exe]],
  ['t0039a', [compile_exe, disassemble_exe]],
  ['t0050a', [compile_exe, disassemble_exe]],
  ['t0051a', [pretty_exe]],
  ['t0052a', [compile_exe, disassemble_exe]],
  ['t0053a', [compile_exe, disassemble_exe]],
  ['t0055a', [pretty_exe]],
  ['t0056a', [compile_exe, disassemble_exe]],
  ['t0057a', [compile_exe, disassemble_exe]],
  ['t0058a', [pretty_exe]],
  ['t0059a', [compile_exe, disassemble_exe]],
  ['t0060a', [compile_exe, disassemble_exe]],
  ['t0061a', [compile_exe, disassemble_exe]],
  ['t0062a', [pretty_exe]],
  ['t0063a', [compile_exe, disassemble_exe]],
  ['t0065a', [pretty_exe]],
  ['t0066a', [compile_exe, disassemble_exe]],
  ['t0067a', [pretty_exe]],
  ['t0068a', [compile_exe]],
  ['t0070a', [compile_exe]],
  ['t0071a', [compile_exe, disassemble_exe]],
  ['t0072a', [compile_exe, disassemble_exe]],
  ['t0073a', [pretty_exe]],
  ['t0075a', [compile_exe, disassemble_exe]],
  ['t0076a', [pretty_exe]],
  ['t0077a', [compile_exe, disassemble_exe]],
  ['t0078a', [compile_exe, disassemble_exe]],
  ['t0079a', [pretty_exe]],
  ['t0080a', [compile_exe, disassemble_exe]],
  ['t0081a', [pretty_exe]],
  ['t0082a', [compile_exe, disassemble_exe]],
  ['t0083a', [pretty_exe]],
  ['t0085a', [compile_exe, disassemble_exe]],
  ['t0086a', [compile_exe, disassemble_exe]],
  ['t0088a', [compile_exe, disassemble_exe]],
  ['t0089a', [compile_exe, disassemble_exe]],
  ['t0090a', [compile_exe, disassemble_exe]],
  ['t0091a', [pretty_exe]],
  ['t0092a', [compile_exe, disassemble_exe]],
  ['t0093a', [pretty_exe]],
  ['t0094a', [compile_exe, disassemble_exe]],
  ['t0095a', [compile_exe]],
  ['t0096a', [compile_exe, disassemble_exe]],
  ['t0097a', [compile_exe, disassemble_exe]],
  ['t0098a', [pretty_exe]],
  ['t0099a', [compile_exe]],
]

foreach case : cases
  name = case[0]
  depends = case[1]
  test(name, sh, args : files(name + '.sh'), env : test_env, depends : depends)
endforeach
