cases = [
  ['t0101a', [compile_exe]],
  ['t0102a', [compile_exe, disassemble_exe]],
  ['t0103a', [compile_exe, disassemble_exe]],
  ['t0104a', [compile_exe, disassemble_exe]],
  ['t0105a', [compile_exe]],
  ['t0106a', [compile_exe, disassemble_exe]],
  ['t0107a', [compile_exe]],
  ['t0108a', [compile_exe, disassemble_exe]],
  ['t0109a', [compile_exe, disassemble_exe]],
  ['t0110a', [compile_exe, disassemble_exe]],
  ['t0111a', [compile_exe, disassemble_exe]],
  ['t0112a', [compile_exe, disassemble_exe]],
  ['t0113a', [pretty_exe]],
  ['t0114a', [compile_exe, disassemble_exe]],
  ['t0115a', [compile_exe, disassemble_exe]],
  ['t0116a', [compile_exe, disassemble_exe]],
  ['t0117a', [compile_exe, disassemble_exe]],
  ['t0118a', [compile_exe, disassemble_exe]],
  ['t0119a', [compile_exe, disassemble_exe]],
  ['t0120a', [compile_exe, disassemble_exe]],
  ['t0121a', [compile_exe, disassemble_exe]],
  ['t0122a', [compile_exe, disassemble_exe]],
  ['t0123a', [compile_exe, disassemble_exe]],
  ['t0124a', [compile_exe, disassemble_exe]],
  ['t0125a', [compile_exe, disassemble_exe]],
  ['t0126a', [compile_exe, disassemble_exe]],
  ['t0127a', [compile_exe, disassemble_exe]],
  ['t0128a', [compile_exe, disassemble_exe]],
  ['t0129a', [compile_exe, disassemble_exe]],
  ['t0130a', [compile_exe, disassemble_exe]],
  ['t0131a', [compile_exe, disassemble_exe]],
  ['t0132a', [compile_exe, disassemble_exe]],
  ['t0133a', [compile_exe, disassemble_exe]],
  ['t0134a', [compile_exe, disassemble_exe]],
  ['t0135a', [compile_exe, disassemble_exe]],
  ['t0136a', [compile_exe, disassemble_exe]],
  ['t0137a', [compile_exe, disassemble_exe]],
  ['t0138a', [compile_exe, disassemble_exe]],
  ['t0139a', [compile_exe, disassemble_exe]],
  ['t0140a', [compile_exe, disassemble_exe]],
  ['t0141a', [compile_exe, disassemble_exe]],
  ['t0142a', [compile_exe, disassemble_exe]],
  ['t0143a', [compile_exe, disassemble_exe]],
  ['t0144a', [compile_exe, disassemble_exe]],
  ['t0145a', [compile_exe, disassemble_exe]],
  ['t0146a', [compile_exe, disassemble_exe]],
  ['t0147a', [compile_exe]],
  ['t0148a', [compile_exe, disassemble_exe]],
  ['t0149a', [compile_exe, disassemble_exe]],
  ['t0150a', [compile_exe, disassemble_exe]],
  ['t0151a', [compile_exe, disassemble_exe]],
  ['t0152a', [compile_exe, disassemble_exe]],
  ['t0153a', [compile_exe]],
  ['t0154a', [compile_exe, disassemble_exe]],
  ['t0155a', [compile_exe, disassemble_exe]],
  ['t0156a', [compile_exe, disassemble_exe]],
  ['t0157a', [compile_exe, disassemble_exe]],
  ['t0158a', [pretty_exe]],
  ['t0159a', [compile_exe, disassemble_exe]],
  ['t0160a', [compile_exe, disassemble_exe]],
  ['t0161a', [compile_exe, disassemble_exe]],
  ['t0162a', [compile_exe, disassemble_exe]],
  ['t0163a', [compile_exe, disassemble_exe]],
  ['t0164a', [compile_exe, disassemble_exe]],
  ['t0165a', [compile_exe, disassemble_exe]],
  ['t0166a', [pretty_exe]],
  ['t0167a', [compile_exe, disassemble_exe]],
  ['t0169a', [compile_exe, disassemble_exe]],
  ['t0170a', [opcodes_exe]],
  ['t0171a', [pretty_exe]],
  ['t0172a', [compile_exe, disassemble_exe]],
  ['t0173a', [pretty_exe]],
  ['t0174a', [compile_exe, disassemble_exe]],
  ['t0175a', [compile_exe, libmap_exe, librarian_exe]],
  ['t0176a', [compile_exe, disassemble_exe]],
  ['t0177a', [compile_exe, libmap_exe, librarian_exe]],
  ['t0178a', [compile_exe, libmap_exe, librarian_exe]],
  ['t0179a', [compile_exe, disassemble_exe]],
  ['t0180a', [compile_exe, disassemble_exe]],
  ['t0182a', [compile_exe, disassemble_exe]],
  ['t0182b', [pretty_exe]],
  ['t0183a', [compile_exe, disassemble_exe]],
  ['t0185a', [compile_exe, disassemble_exe]],
  ['t0186a', [compile_exe, disassemble_exe]],
  ['t0187a', [compile_exe, disassemble_exe]],
  ['t0189a', [compile_exe]],
  ['t0190a', [compile_exe, disassemble_exe]],
  ['t0191a', [compile_exe, disassemble_exe]],
  ['t0192a', [pretty_exe]],
  ['t0193a', [compile_exe, disassemble_exe]],
  ['t0194a', [compile_exe, disassemble_exe]],
  ['t0195a', [compile_exe, disassemble_exe]],
  ['t0196a', [compile_exe, disassemble_exe]],
  ['t0197a', [compile_exe, disassemble_exe]],
  ['t0198a', [pretty_exe]],
  ['t0199a', [compile_exe, disassemble_exe]],
]

foreach case : cases
  name = case[0]
  depends = case[1]
  test(name, sh, args : files(name + '.sh'), env : test_env, depends : depends)
endforeach
