test('t0200a', sh, args : files('t0200a.sh'), env : test_env, depends : [pretty_exe,])
test('t0201a', sh, args : files('t0201a.sh'), env : test_env, depends : [pretty_exe,])
test('t0202a', sh, args : files('t0202a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0203a', sh, args : files('t0203a.sh'), env : test_env, depends : [pretty_exe,])
test('t0204a', sh, args : files('t0204a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0205a', sh, args : files('t0205a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0206a', sh, args : files('t0206a.sh'), env : test_env, depends : [pretty_exe,])
test('t0207a', sh, args : files('t0207a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0208a', sh, args : files('t0208a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0209a', sh, args : files('t0209a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0210a', sh, args : files('t0210a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0211a', sh, args : files('t0211a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0212a', sh, args : files('t0212a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0213a', sh, args : files('t0213a.sh'), env : test_env, depends : [pretty_exe,])
test('t0214a', sh, args : files('t0214a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0215a', sh, args : files('t0215a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0216a', sh, args : files('t0216a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0217a', sh, args : files('t0217a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0218a', sh, args : files('t0218a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0219a', sh, args : files('t0219a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0220a', sh, args : files('t0220a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0221a', sh, args : files('t0221a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0222a', sh, args : files('t0222a.sh'), env : test_env, depends : [pretty_exe,])
test('t0223a', sh, args : files('t0223a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0224a', sh, args : files('t0224a.sh'), env : test_env, depends : [compile_exe,])
test('t0225a', sh, args : files('t0225a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0227a', sh, args : files('t0227a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0228a', sh, args : files('t0228a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0229a', sh, args : files('t0229a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0230a', sh, args : files('t0230a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0231a', sh, args : files('t0231a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0232a', sh, args : files('t0232a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0233a', sh, args : files('t0233a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0234a', sh, args : files('t0234a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0235a', sh, args : files('t0235a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0236a', sh, args : files('t0236a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0237a', sh, args : files('t0237a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0238a', sh, args : files('t0238a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0239a', sh, args : files('t0239a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0240a', sh, args : files('t0240a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0241a', sh, args : files('t0241a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0242a', sh, args : files('t0242a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0243a', sh, args : files('t0243a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0244a', sh, args : files('t0244a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0245a', sh, args : files('t0245a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0246a', sh, args : files('t0246a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0247a', sh, args : files('t0247a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0248a', sh, args : files('t0248a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0249a', sh, args : files('t0249a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0250a', sh, args : files('t0250a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0251a', sh, args : files('t0251a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0252a', sh, args : files('t0252a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0253a', sh, args : files('t0253a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0254a', sh, args : files('t0254a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0255a', sh, args : files('t0255a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0256a', sh, args : files('t0256a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0257a', sh, args : files('t0257a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0258a', sh, args : files('t0258a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0259a', sh, args : files('t0259a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0260a', sh, args : files('t0260a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0261a', sh, args : files('t0261a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0262a', sh, args : files('t0262a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0263a', sh, args : files('t0263a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0264a', sh, args : files('t0264a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0265a', sh, args : files('t0265a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0266a', sh, args : files('t0266a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0267a', sh, args : files('t0267a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0268a', sh, args : files('t0268a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0269a', sh, args : files('t0269a.sh'), env : test_env, depends : [pretty_exe,])
test('t0270a', sh, args : files('t0270a.sh'), env : test_env, depends : [pretty_exe,])
test('t0271a', sh, args : files('t0271a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0272a', sh, args : files('t0272a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0273a', sh, args : files('t0273a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0274a', sh, args : files('t0274a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0275a', sh, args : files('t0275a.sh'), env : test_env, depends : [compile_exe,])
test('t0276a', sh, args : files('t0276a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0277a', sh, args : files('t0277a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0278a', sh, args : files('t0278a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0279a', sh, args : files('t0279a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0280a', sh, args : files('t0280a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0281a', sh, args : files('t0281a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0282a', sh, args : files('t0282a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0283a', sh, args : files('t0283a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0284a', sh, args : files('t0284a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0285a', sh, args : files('t0285a.sh'), env : test_env, depends : [pretty_exe,])
test('t0286a', sh, args : files('t0286a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0287a', sh, args : files('t0287a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0288a', sh, args : files('t0288a.sh'), env : test_env, depends : [compile_exe,])
test('t0289a', sh, args : files('t0289a.sh'), env : test_env, depends : [compile_exe,])
test('t0290a', sh, args : files('t0290a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0291a', sh, args : files('t0291a.sh'), env : test_env, depends : [pretty_exe,])
test('t0292a', sh, args : files('t0292a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0293a', sh, args : files('t0293a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0294a', sh, args : files('t0294a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0295a', sh, args : files('t0295a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0296a', sh, args : files('t0296a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0297a', sh, args : files('t0297a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0298a', sh, args : files('t0298a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
test('t0299a', sh, args : files('t0299a.sh'), env : test_env, depends : [compile_exe, disassemble_exe,])
