cases = [
  ['t0200a', [pretty_exe]],
  ['t0201a', [pretty_exe]],
  ['t0202a', [compile_exe, disassemble_exe]],
  ['t0203a', [pretty_exe]],
  ['t0204a', [compile_exe, disassemble_exe]],
  ['t0205a', [compile_exe, disassemble_exe]],
  ['t0206a', [pretty_exe]],
  ['t0207a', [compile_exe, disassemble_exe]],
  ['t0208a', [compile_exe, disassemble_exe]],
  ['t0209a', [compile_exe, disassemble_exe]],
  ['t0210a', [compile_exe, disassemble_exe]],
  ['t0211a', [compile_exe, disassemble_exe]],
  ['t0212a', [compile_exe, disassemble_exe]],
  ['t0213a', [pretty_exe]],
  ['t0214a', [compile_exe, disassemble_exe]],
  ['t0215a', [compile_exe, disassemble_exe]],
  ['t0216a', [compile_exe, disassemble_exe]],
  ['t0217a', [compile_exe, disassemble_exe]],
  ['t0218a', [compile_exe, disassemble_exe]],
  ['t0219a', [compile_exe, disassemble_exe]],
  ['t0220a', [compile_exe, disassemble_exe]],
  ['t0221a', [compile_exe, disassemble_exe]],
  ['t0222a', [pretty_exe]],
  ['t0223a', [compile_exe, disassemble_exe]],
  ['t0224a', [compile_exe]],
  ['t0225a', [compile_exe, disassemble_exe]],
  ['t0227a', [compile_exe, disassemble_exe]],
  ['t0228a', [compile_exe, disassemble_exe]],
  ['t0229a', [compile_exe, disassemble_exe]],
  ['t0230a', [compile_exe, disassemble_exe]],
  ['t0231a', [compile_exe, disassemble_exe]],
  ['t0232a', [compile_exe, disassemble_exe]],
  ['t0233a', [compile_exe, disassemble_exe]],
  ['t0234a', [compile_exe, disassemble_exe]],
  ['t0235a', [compile_exe, disassemble_exe]],
  ['t0236a', [compile_exe, disassemble_exe]],
  ['t0237a', [compile_exe, disassemble_exe]],
  ['t0238a', [compile_exe, disassemble_exe]],
  ['t0239a', [compile_exe, disassemble_exe]],
  ['t0240a', [compile_exe, disassemble_exe]],
  ['t0241a', [compile_exe, disassemble_exe]],
  ['t0242a', [compile_exe, disassemble_exe]],
  ['t0243a', [compile_exe, disassemble_exe]],
  ['t0244a', [compile_exe, disassemble_exe]],
  ['t0245a', [compile_exe, disassemble_exe]],
  ['t0246a', [compile_exe, disassemble_exe]],
  ['t0247a', [compile_exe, disassemble_exe]],
  ['t0248a', [compile_exe, disassemble_exe]],
  ['t0249a', [compile_exe, disassemble_exe]],
  ['t0250a', [compile_exe, disassemble_exe]],
  ['t0251a', [compile_exe, disassemble_exe]],
  ['t0252a', [compile_exe, disassemble_exe]],
  ['t0253a', [compile_exe, disassemble_exe]],
  ['t0254a', [compile_exe, disassemble_exe]],
  ['t0255a', [compile_exe, disassemble_exe]],
  ['t0256a', [compile_exe, disassemble_exe]],
  ['t0257a', [compile_exe, disassemble_exe]],
  ['t0258a', [compile_exe, disassemble_exe]],
  ['t0259a', [compile_exe, disassemble_exe]],
  ['t0260a', [compile_exe, disassemble_exe]],
  ['t0261a', [compile_exe, disassemble_exe]],
  ['t0262a', [compile_exe, disassemble_exe]],
  ['t0263a', [compile_exe, disassemble_exe]],
  ['t0264a', [compile_exe, disassemble_exe]],
  ['t0265a', [compile_exe, disassemble_exe]],
  ['t0266a', [compile_exe, disassemble_exe]],
  ['t0267a', [compile_exe, disassemble_exe]],
  ['t0268a', [compile_exe, disassemble_exe]],
  ['t0269a', [pretty_exe]],
  ['t0270a', [pretty_exe]],
  ['t0271a', [compile_exe, disassemble_exe]],
  ['t0272a', [compile_exe, disassemble_exe]],
  ['t0273a', [compile_exe, disassemble_exe]],
  ['t0274a', [compile_exe, disassemble_exe]],
  ['t0275a', [compile_exe]],
  ['t0276a', [compile_exe, disassemble_exe]],
  ['t0277a', [compile_exe, disassemble_exe]],
  ['t0278a', [compile_exe, disassemble_exe]],
  ['t0279a', [compile_exe, disassemble_exe]],
  ['t0280a', [compile_exe, disassemble_exe]],
  ['t0281a', [compile_exe, disassemble_exe]],
  ['t0282a', [compile_exe, disassemble_exe]],
  ['t0283a', [compile_exe, disassemble_exe]],
  ['t0284a', [compile_exe, disassemble_exe]],
  ['t0285a', [pretty_exe]],
  ['t0286a', [compile_exe, disassemble_exe]],
  ['t0287a', [compile_exe, disassemble_exe]],
  ['t0288a', [compile_exe]],
  ['t0289a', [compile_exe]],
  ['t0290a', [compile_exe, disassemble_exe]],
  ['t0291a', [pretty_exe]],
  ['t0292a', [compile_exe, disassemble_exe]],
  ['t0293a', [compile_exe, disassemble_exe]],
  ['t0294a', [compile_exe, disassemble_exe]],
  ['t0295a', [compile_exe, disassemble_exe]],
  ['t0296a', [compile_exe, disassemble_exe]],
  ['t0297a', [compile_exe, disassemble_exe]],
  ['t0298a', [compile_exe, disassemble_exe]],
  ['t0299a', [compile_exe, disassemble_exe]],
]

foreach case : cases
  name = case[0]
  depends = case[1]
  test(name, sh, args : files(name + '.sh'), env : test_env, depends : depends)
endforeach
